# mmds-ucu-final-project

./: .gitignore  LICENSE  README.md
mmds_ucu_final_project/: pyproject.toml
mmds_ucu_final_project/mmds_ucu_final_project/connect_to_wikipedia/: socket_server.py  spark_streaming.py
mmds_ucu_final_project/mmds_ucu_final_project/notebooks/: connect_to_wikipedia_edit_stream.ipynb  exploratory.ipynb  lightgbm_bot_classification.ipynb
mmds_ucu_final_project/mmds_ucu_final_project/src/: Dockerfile_socket_server  Dockerfile_spark_streaming  bloom_filter.py  params.py  requirements.txt  socket_server.py  spark_streaming.py  utils.py
