[tool.poetry]
name = "mmds-ucu-final-project"
version = "0.1.0"
description = ""
authors = ["rkovalch <mrbylba@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pyspark = "^3.5.3"
jupyter = "^1.1.1"
pybloom-live = "^4.0.0"
pydantic = "^2.9.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
